added line to hosts file

--- a/assets/setup/install
+++ b/assets/setup/install
@@ -79,3 +79,5 @@ ln -s /app/phantomjs/bin/phantomjs /usr/bin/phantomjs
 phantomjs --version
 
 curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.29.0/install.sh | bash
+
+grep gitlab-1 /etc/hosts|head -n 1 | awk '{print $1 "\tgitlab.apps.dasbob.com"}'> /etc/hosts
